--- a/project/elder-project/src/main/resources/static/js/views/phone/bindPhoneSuccess.html
+++ b/project/elder-project/src/main/resources/static/js/views/phone/bindPhoneSuccess.html
@@ -1,18 +1,14 @@
 <ion-view style="background:#f8f8f8;">
     <ion-content>
         <img src="images/success.png" alt="" style="width:140px;margin-left:31%;margin-top:56px;">
-        <div class="subscribeSuccessCont">
-            <p>工作人员将在第一时间通过您留下的手机号码联系到您，请保持电话畅通。</p>
-            <p>该项服务产生的费用将当面结算</p>
-        </div>
-        <div>
+        <div ng-if="true" style="margin-top:30%;">
             <button class="button button-assertive"
                     style="width:38%;height:100%;margin-left:9%;background-color:#b2b2b2;border-radius:23px;"
-                    ng-click="enterSubscribeServiceList()">查看订单
+                    ng-click="">健康数据
             </button>
             <button class="button button-assertive"
                     style="width:38%;height:100%;margin-left:3%;background-color:#ff8e01;border-radius:23px;"
-                    ng-click="enterLivingIndex()">返回老友居家
+                    ng-click="">老友首页
             </button>
         </div>
     </ion-content>
