--- a/project/elder-project/src/main/resources/static/js/views/living/livingServiceDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingServiceDetail.html
@@ -1,25 +1,23 @@
 <ion-view style="background:#f8f8f8;">
-    <ion-header-bar align-title="center" class="bar-energized">
-        <div class="buttons">
-            <button class="button" ng-click="returnRootNative()">&lt;返回</button>
+    <ion-content>
+        <div class="item">
+            <div class="list">
+                <div class="item item-image">
+                    <img src="images/service_bj.png">
+                </div>
+                <div class="serviceDetail_tit">
+                    <div>{{response.name}}</div>
+                    <div>{{response.flag}}人已体验</div>
+                    <p><i class="icon"></i>{{response.officeName}}</p>
+                </div>
+            </div>
         </div>
-        <h1 class="title">居家服务详情</h1>
-    </ion-header-bar>
-    <div class="list card" style="margin-top:50px">
-        <div class="item item-image">
-            <img src="http://yhllaoyoubanner.oss-cn-hangzhou.aliyuncs.com/QQ%E5%9B%BE%E7%89%8720170816111212.jpg?x-oss-process=image/resize,m_fill,h_200,w_420">
-        </div>
-    </div>
-    <ion-content style="margin-top:180px">
         <div class="list">
-            <a class="item item-avatar item-text-wrap" style="min-height:80px">
-                <button class="button button-energized button-larger item-note"
-                        style="min-width:100px"
-                        ng-click="subscribeService()">预约</button>
-                <h2><span style="margin-left:-15%;font-size:20px">¥{{response.price}}元/{{response.priceUnit}}</span></h2>
-                <h2><span style="margin-left:-15%;font-size:15px;color:red">审核通过后当面结算付费</span></h2>
-            </a>
             <a class="item item-avatar item-text-wrap">
+                <h2><span style="margin-left:-15%;">¥{{response.price}}元/{{response.priceUnit}}</span></h2>
+                <h2><span style="margin-left:-15%;">审核通过后当面结算付费</span></h2>
+            </a>
+            <a class="item item-avatar item-text-wrap serviceDetail_cont" style="border:none;background:#f8f8f8;">
                 <h2><span style="margin-left:-15%">服务介绍</span></h2>
                 <p style="margin-left:-15%">{{response.description}}</p>
                 <br><br>
@@ -30,6 +28,7 @@
                 </p>
             </a>
         </div>
+        <button class="button button-full button-energized subscribe-btn" ng-click="subscribeService()">立即预约</button>
     </ion-content>
 </ion-view>
 
