--- a/project/elder-project/src/main/resources/static/js/views/living/livingServiceList.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingServiceList.html
@@ -1,11 +1,5 @@
 <ion-view style="background:#f8f8f8;">
-    <ion-header-bar align-title="center" class="bar-energized">
-        <div class="buttons">
-            <button class="button" ng-click="returnRootNative()">&lt;返回</button>
-        </div>
-        <h1 class="title">居家服务</h1>
-    </ion-header-bar>
-    <div class="tabs tabs-top tabs-striped">
+    <div class="tabs tabs-top tabs-striped" style="top:0px;background:#fff;">
         <a ng-class="{true:'tab-item active',false:'tab-item'}[param.type=='short']"
            style="border-color:#ff8e01"
            ng-click="chooseLivingService('short')">
@@ -17,74 +11,42 @@
             <p>长期照护</p>
         </a>
     </div>
-    <ion-content style="margin-top:47px">
+    <ion-content style="margin-top:62px">
         <ion-refresher pulling-text="下拉刷新" on-refresh="sortService()"></ion-refresher>
         <div class="list" ng-if="param.type=='short'">
             <a class="item item-avatar item-text-wrap"
-               ng-repeat="item in shortResponse"
-               style="min-height:115px" ng-click="livingServiceDetail(item.id)">
-                <h2>
-                    <span style="margin-left:-15%;font-size:20px">{{item.name}}</span>
-                    <span style="float:right">¥{{item.price}}元/{{item.priceUnit}}</span>
+               ng-repeat="item in shortResponse" ng-click="livingServiceDetail(item.id)">
+                <h2 class="serviceListTit">
+                    <span>{{item.name}}</span>
+                    <span><em>¥{{item.price}}元</em><i>/{{item.priceUnit}}</i></span>
                 </h2>
-                <button class="button button-energized button-small item-note"
-                        style="margin-top:27px;min-width:55px">详情</button>
-                <p style="margin-left:-42px">{{item.description}}</p>
-                <p style="margin-left:-42px">
-                    <i class="ion ion-record" style="color:red"></i>&nbsp;该服务由{{item.officeName}}提供
-                </p>
+                <p>{{item.description}}</p>
+                <p><i class="icon"></i>{{item.officeName}}</p>
             </a>
             <ion-infinite-scroll ng-if="param.canMoreShort" on-infinite="loadMoreShort()" distance="1%" ></ion-infinite-scroll>
         </div>
         <div class="list" ng-if="param.type=='long'">
             <a class="item item-avatar item-text-wrap"
-               ng-repeat="item in longResponse"
-               style="min-height:115px" ng-click="livingServiceDetail(item.id)">
-                <h2>
-                    <span style="margin-left:-15%;font-size:20px">{{item.name}}</span>
-                    <span style="float:right">¥{{item.price}}元/{{item.priceUnit}}</span>
+               ng-repeat="item in longResponse" ng-click="livingServiceDetail(item.id)">
+                <h2 class="serviceListTit">
+                    <span>{{item.name}}</span>
+                    <span><em>¥{{item.price}}元</em><i>/{{item.priceUnit}}</i></span>
                 </h2>
-                <button class="button button-energized button-small item-note"
-                        style="margin-top:27px;min-width:55px">详情</button>
-                <p style="margin-left:-42px">{{item.description}}</p>
-                <p style="margin-left:-42px">
-                    <i class="ion ion-record" style="color:red"></i>&nbsp;该服务由{{item.officeName}}提供
-                </p>
+                <p>{{item.description}}</p>
+                <p><i class="icon"></i>{{item.officeName}}</p>
             </a>
             <ion-infinite-scroll ng-if="param.canMoreLong" on-infinite="loadMoreLong()" distance="1%" ></ion-infinite-scroll>
         </div>
         <div style="height:88px;"></div>
     </ion-content>
-    <div class="bar bar-footer bar-stable" style="height:88px;">
-        <div class="title" ng-if="param.type == 'short'">共为您加载{{shortResponse.length}}条数据</div>
-        <div class="title" ng-if="param.type == 'long'">共为您加载{{longResponse.length}}条数据</div>
-        <button class="button button-icon icon-left icon-funnel" ng-click="sortShow()" style="left:45%;background:transparent;margin-top:4%;">筛选</button>
+    <div class="bar bar-footer bar-stable" style="height:110px;">
+        <div class="title" ng-if="param.type == 'short'" style="font-size: 14px;">共为您加载{{shortResponse.length}}条数据</div>
+        <div class="title" ng-if="param.type == 'long'" style="font-size: 14px;">共为您加载{{longResponse.length}}条数据</div>
+        <div class="filtrateBtn" ng-click="sortShow()">筛选</div>
     </div>
 </ion-view>
-<style>
-    /*居家服务列表筛选*/
-    .filtrateArea{
-        width:100%;
-        height:100%;
-        position:fixed;
-        left:0px;
-        top:100%;
-        z-index:2;
-        background:#f8f8f8;
-    }
-    .sortDiv{
-        width:25%;
-        float:left;
-        margin:8px 15px;
-        text-align:center;
-    }
-    .sortDiv>input:checked~label{
-        background-color: #ddd;
-        border-color:#ddd;
-    }
-</style>
 <div class="filtrateArea">
-    <div class="bar bar-header bar-energized">
+    <div class="bar bar-header">
         <button class="button button-icon icon ion-ios-arrow-left" ng-click="sortHide()"></button>
         <h1 class="title">服务筛选</h1>
     </div>
