--- a/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
@@ -1,22 +1,33 @@
 <ion-view style="background:#f8f8f8;" ng-if="!param.startCourseFlag">
-	<ion-header-bar align-title="center" class="bar-energized">
-		<div class="buttons">
-			<button class="button" ng-click="returnRootNative()">&lt;返回</button>
-		</div>
-		<h1 class="title">{{param.onlineCourseDetail.onlineCourseName}}</h1>
-	</ion-header-bar>
+	<!--<ion-header-bar align-title="center" class="bar-energized">-->
+		<!--<div class="buttons">-->
+			<!--<button class="button" ng-click="returnRootNative()">&lt;返回</button>-->
+		<!--</div>-->
+		<!--<h1 class="title">{{param.onlineCourseDetail.onlineCourseName}}</h1>-->
+	<!--</ion-header-bar>-->
 	<ion-content>
 		<img class="full-image" style="height:150px"
 			 ng-src="{{param.onlineCourseDetail.onlineCourseLogo}}">
-		<p style="color:black;margin-left:25px;margin-top:15px;">
-			<i class="icon ion-clock"></i>&nbsp;<span>课程时长</span>&nbsp;&nbsp;&nbsp;&nbsp;
-			{{param.onlineCourseDetail.onlineCourseDuration}}小时</p>
-		<div class="list" style="margin-top:15px;">
-			<div class="item item-divider">
-				课程简介
-			</div>
-			<a class="item item-text-wrap" style="color: black;font-size:12px;">
-				{{param.onlineCourseDetail.onlineCourseOutline}}
+		<!--<p style="color:black;margin-left:25px;margin-top:15px;">-->
+			<!--<i class="icon ion-clock"></i>&nbsp;<span>课程时长</span>&nbsp;&nbsp;&nbsp;&nbsp;-->
+			<!--{{param.onlineCourseDetail.onlineCourseDuration}}小时</p>-->
+		<!--<div class="list" style="margin-top:15px;">-->
+			<!--<div class="item item-divider">-->
+				<!--课程简介-->
+			<!--</div>-->
+			<!--<a class="item item-text-wrap" style="color: black;font-size:12px;">-->
+				<!--{{param.onlineCourseDetail.onlineCourseOutline}}-->
+			<!--</a>-->
+		<!--</div>-->
+		<div class="list" style="margin-top:50px;">
+			<a class="item item-avatar item-text-wrap serviceDetail_cont" style="border:none;background:#f8f8f8;padding-left:20px;">
+				<h2><span>{{param.onlineCourseDetail.onlineCourseName}}</span></h2>
+				<p>主题：{{param.onlineCourseDetail.onlineCourseLabel}}</p>
+				<p>主讲人介绍：{{param.onlineCourseDetail.onlineCourseTeacherName}}<br/>{{param.onlineCourseDetail.onlineCourseTeacherLevel}}</p>
+				<p>时长：{{param.onlineCourseDetail.onlineCourseDuration}}小时</p>
+                <br><br>
+				<h2><span>课程简介</span></h2>
+				<p>{{param.onlineCourseDetail.onlineCourseOutline}}</p>
 			</a>
 		</div>
 		<div style="background:white;width:90%;margin-left:5%;">
@@ -35,12 +46,12 @@
 	</div>
 </ion-view>
 <ion-view style="background:#f8f8f8;" ng-if="param.startCourseFlag">
-	<ion-header-bar align-title="center" class="bar-energized">
-		<div class="buttons">
-			<button class="button" ng-click="returnRootNative()">&lt;返回</button>
-		</div>
-		<h1 class="title">{{param.onlineCourseDetail.onlineCourseName}}</h1>
-	</ion-header-bar>
+	<!--<ion-header-bar align-title="center" class="bar-energized">-->
+		<!--<div class="buttons">-->
+			<!--<button class="button" ng-click="returnRootNative()">&lt;返回</button>-->
+		<!--</div>-->
+		<!--<h1 class="title">{{param.onlineCourseDetail.onlineCourseName}}</h1>-->
+	<!--</ion-header-bar>-->
 	<ion-content>
 		<div>
 			<video ng-src="{{param.playURL}}"
