--- a/project/elder-project/src/main/resources/static/js/views/living/livingServiceList.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingServiceList.html
@@ -13,7 +13,7 @@
     </div>
     <ion-content style="margin-top:62px">
         <ion-refresher pulling-text="下拉刷新" on-refresh="sortService()"></ion-refresher>
-        <div class="list" ng-if="param.type=='short'">
+        <div class="list livingList" ng-if="param.type=='short'">
             <a class="item item-avatar item-text-wrap"
                ng-repeat="item in shortResponse" ng-click="livingServiceDetail(item.id)">
                 <h2 class="serviceListTit">
