--- a/project/elder-project/src/main/resources/static/js/views/my/myClass.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myClass.html
@@ -1,15 +1,8 @@
-<ion-view style="background:white;">
-    <ion-header-bar align-title="center" class="bar-energized">
-        <div class="buttons">
-            <button class="button" ng-click="returnRootNative()">&lt;返回</button>
-        </div>
-        <h1 class="title">我的课程</h1>
-    </ion-header-bar>
+<ion-view style="background:#f8f8f8;">
     <!--课程列表-->
     <div>
         <div ng-if="param.myCourseList.length==0"
-             class="list card"
-             style="margin-top:15%">
+             class="list card">
             <div class="item item-body">
                 <img class="full-image"
                      src="http://yhllaoyouactivity.oss-cn-beijing.aliyuncs.com/head/QQ%E5%9B%BE%E7%89%8720171106093303.png">
@@ -18,30 +11,19 @@
                         style="margin-left:37%;border-radius:20px" ui-sref="courseList({type:'vod'})">查看课程</button>
             </div>
         </div>
-        <div ng-if="param.myCourseList.length>0" style="margin-top:12%">
-            <div class="list">
-                <style>
-                    .talkOdd {
-                        background-color: white;
-                    }
-                    .talkEven {
-                        background-color: #f8f8f8;
-                    }
-                </style>
-                <a class="item item-avatar item-text-wrap"
+        <div ng-if="param.myCourseList.length>0">
+            <div class="list courseList">
+                <a class="item item-image"
+                   style="min-height:50px;padding:2%;"
                    ng-repeat="item in param.myCourseList"
-                   ui-sref="courseDetail({courseId:item.onlineCourseDTO.onlineCourseId,courseType:'vod'})"
-                   ng-class-odd="'talkOdd'"
-                   ng-class-even="'talkEven'">
-                    <img ng-src="{{item.onlineCourseDTO.onlineCourseLogo}}"
-                         style="max-width:50px;max-height:50px;border-radius:0;margin-left:-5px;">
-                    <h2>{{item.onlineCourseDTO.onlineCourseName}}</h2>
-                    <p>课程提供方：{{item.onlineCourseDTO.onlineCourseProvider}}</p>
-                    <span class="item-note"
-                          style="text-align:right;margin-top:-10px">
-                    <p>{{item.onlineCourseDTO.onlineCourseStudyNum}}人学习</p>
-                </span>
-                    <p>授课老师：{{item.onlineCourseDTO.onlineCourseTeacherName}}</p>
+                   ui-sref="courseDetail({courseId:item.onlineCourseDTO.onlineCourseId})">
+                    <img ng-if="$index%3==1" src="images/course_bj02.png">
+                    <img ng-if="$index%3==2" src="images/course_bj03.png">
+                    <img ng-if="$index%3==0" src="images/course_bj01.png">
+                    <div class="courseCont">
+                        <h2>{{item.onlineCourseDTO.onlineCourseName}}</h2>
+                        <p>{{item.onlineCourseDTO.onlineCourseStudyNum}}人已上课</p>
+                    </div>
                 </a>
             </div>
         </div>
