--- a/project/elder-project/src/main/resources/static/js/views/my/myselfCenter.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myselfCenter.html
@@ -37,14 +37,15 @@
             <i class="icon ion-ios-arrow-right"></i>
         </a>
         <a class="item item-icon-left item-icon-right"
-           ui-sref="myselfInfo" style="margin-top:10px;">
+           ui-sref="extendMessage" style="margin-top:10px;">
             <i class="icon">
                 <img src="images/laoyou_icon_05.png">
             </i>
             消息中心
             <i class="icon ion-ios-arrow-right"></i>
         </a>
-        <a class="item item-icon-left item-icon-right">
+        <a class="item item-icon-left item-icon-right"
+            ui-sref="feedback">
             <i class="icon">
                 <img src="images/laoyou_icon_04.png">
             </i>
